--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -7,8 +7,8 @@
     <title>AirBnB clone</title>
 </head>
 <body style="margin: 0; padding: 0;">
-    <header style="color: #FF0000; height: 70px; width: 100%;"></header>
-    <footer style="color: #00FF00; height: 60px; width: 100%;">
+    <header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
+    <footer style="background-color: #00FF00; height: 60px; width: 100%;">
         <p>Best School</p>
     </footer>
 </body>
