--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="margin: 0; padding: 0;">
     <header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
-    <footer style="background-color: #00FF00; height: 60px; width: 100%;">
+    <footer style="background-color: #00FF00; height: 60px; width: 100%; bottom: 0; position: absolute; display: flex; align-items: center; justify-content: center;">
         <p>Best School</p>
     </footer>
 </body>
