--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -17,7 +17,7 @@
         <section class="filters">
             <div class="locations">
                 <h3>States</h3>
-                <h4>Claifornia, Arizona...</h4>
+                <h4>California, Arizona...</h4>
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
