[Feature]: adding amenities and reviews to places

--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -76,8 +76,6 @@
                         <li class="liWifi">Wifi</li>
                         <li class="liPets">Pets friendly</li>
                         <li class="liParking">Parking Space</li>
-                        <li class="liWater">Water Supply</li>
-                        <li class="liPower">Power Backup</li>
                     </ul>
                 </div>
                 <div class="reviews">
@@ -127,7 +125,7 @@
                     </ul>
                 </div>
                 <div class="reviews">
-                    <h2>2 Reviews</h2>
+                    <h2>1 Reviews</h2>
                     <ul>
                         <li>
                             <h3>From Max the 15th January 2017</h3>
@@ -170,12 +168,14 @@
                     <h2>Amenities</h2>
                     <ul>
                         <li class="liTv">TV</li>
+                        <li class="liWifi">Wifi</li>
                         <li class="liPets">Pets friendly</li>
                         <li class="liWater">Water Supply</li>
+                        <li class="liPower">Power Backup</li>
                     </ul>
                 </div>
                 <div class="reviews">
-                    <h2>3 Reviews</h2>
+                    <h2>2 Reviews</h2>
                     <ul>
                         <li>
                             <h3>From Juan the 20th January 2017</h3>
@@ -184,10 +184,6 @@
                         <li>
                             <h3>From Laura the 5th February 2017</h3>
                             <p>Amazing places</p>
-                        </li>
-                        <li>
-                            <h3>From Johnathan the 5th February 2017</h3>
-                            <p>Good place to stay!</p>
                         </li>
                     </ul>
                 </div>
